Fix overflow-x for bigger screans

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,6 +5,9 @@
 $grayMediumLight: #eaeaea;
 
 /* universal */
+body#top{
+	overflow-x: hidden !important;
+}
 
 /* footer */
 
